# test_pep_420

./: .gitignore  .projectile  MANIFEST.in  README.md  README.org  pyproject.toml  setup.cfg
implicit_namespace_foo/bar/: my_bar.py
implicit_namespace_foo/baz/: my_baz.py
test/bar/: test_pep420_implicit_namespace_package.py
