[metadata]
name = implicit_namespace_foo
version = "0.0.1"
url = https://github.com/BloggerBust/test_pep_420
project_urls =
    Source = https://github.com/BloggerBust/test_pep_420
    Issues = https://github.com/BloggerBust/test_pep_420/issues/
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = Trevor Wilson
author_email = trevor.wilson@bloggerbust.ca
license = Apache License v2.0
license_file = LICENSE-2.0.txt
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8    
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    
[options]
namespace_packages =
    implicit_namespace_foo
packages = find:
install_requires = 
    importlib_metadata; python_version < '3.8'
